<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <PreferenceCategory
        android:key="pref_key_category_app_launch"
        android:title="@string/pref_title_app_launch_settings" >
        <SwitchPreference
            android:key="pref_key_enable_app_launch"
            android:defaultValue="false"
            android:title="@string/pref_title_app_launch"
            android:summaryOn="@string/pref_summary_app_launch_on"
            android:summaryOff="@string/pref_summary_app_launch_off"
            android:persistent="false" />

        <Preference
            android:key="pref_key_app_launch_info"
            android:summary="@string/pref_summary_launch_app_name"
            android:title="@string/pref_title_launch_app_info" />
    </PreferenceCategory>

</PreferenceScreen>
